--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "@types/dotenv": "^8.2.0",
-        "dotenv": "^8.2.0"
+        "dotenv": "^8.2.0",
+        "node-fetch": "^2.6.0"
     }
 }
