--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,7 @@
   "version": "0.1.0",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && netlify-lambda build src/functions",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -15,15 +15,18 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.10.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/aws-lambda": "^8.10.61",
     "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
+    "@types/node": "^12.12.54",
+    "@types/react": "^16.9.46",
+    "@types/react-dom": "^16.9.8",
+    "netlify-lambda": "^2.0.1",
     "react-scripts": "3.4.2",
-    "typescript": "~3.7.2"
+    "typescript": "^3.7.5"
   },
   "eslintConfig": {
     "extends": "react-app"
