--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.2",
+    "node-fetch": "^2.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
@@ -22,6 +23,7 @@
     "@types/aws-lambda": "^8.10.61",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.12.54",
+    "@types/node-fetch": "^2.5.7",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
     "netlify-lambda": "^2.0.1",
