--- a/web/netlify.toml
+++ b/web/netlify.toml
@@ -2,3 +2,8 @@
   command = "yarn build"
   functions = "functions"
   publish = "build"
+
+[[redirects]]
+  from = '/api/*'
+  to = '/.netlify/functions/:splat'
+  status = 200
