--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.5.2",
     "dotenv": "^8.2.0",
     "encoding": "^0.1.13",
+    "faunadb": "^3.0.1",
     "http-proxy-middleware": "^1.0.5",
     "node-fetch": "^2.6.0",
     "react": "^16.13.1",
