--- a/web/package.json
+++ b/web/package.json
@@ -10,30 +10,32 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "@sendgrid/mail": "^7.2.4",
+    "@sendgrid/mail": "^7.2.5",
     "bootstrap": "^4.5.2",
     "dotenv": "^8.2.0",
     "encoding": "^0.1.13",
     "http-proxy-middleware": "^1.0.5",
     "mongodb": "^3.6.2",
     "mongodb-client-encryption": "^1.1.0",
-    "node-fetch": "^2.6.0",
+    "node-fetch": "^2.6.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "saslprep": "^1.0.3"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.10.4",
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^10.4.9",
-    "@testing-library/user-event": "^12.1.3",
-    "@types/aws-lambda": "^8.10.61",
+    "@testing-library/react": "^11.0.2",
+    "@testing-library/user-event": "^12.1.4",
+    "@types/aws-lambda": "^8.10.62",
     "@types/dotenv": "^8.2.0",
-    "@types/jest": "^26.0.12",
-    "@types/node": "^14.6.2",
+    "@types/jest": "^26.0.13",
+    "@types/node": "^14.10.1",
     "@types/node-fetch": "^2.5.7",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
     "concurrently": "^5.3.0",
     "netlify-lambda": "^2.0.1",
     "react-scripts": "3.4.3",
