--- a/web/package.json
+++ b/web/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@sendgrid/mail": "^7.2.5",
     "bootstrap": "^4.5.2",
+    "chart.js": "^2.9.3",
     "dotenv": "^8.2.0",
     "encoding": "^0.1.13",
     "http-proxy-middleware": "^1.0.5",
+    "moment": "^2.28.0",
     "mongodb": "^3.6.2",
     "mongodb-client-encryption": "^1.1.0",
     "node-fetch": "^2.6.1",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "saslprep": "^1.0.3"
@@ -29,6 +32,7 @@
     "@testing-library/react": "^11.0.2",
     "@testing-library/user-event": "^12.1.4",
     "@types/aws-lambda": "^8.10.62",
+    "@types/chart.js": "^2.9.24",
     "@types/dotenv": "^8.2.0",
     "@types/jest": "^26.0.13",
     "@types/node": "^14.10.1",
