--- a/web/.gitignore
+++ b/web/.gitignore
@@ -14,10 +14,8 @@
 
 # misc
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.prod
+.env.dev
 
 npm-debug.log*
 yarn-debug.log*
