--- a/web/package.json
+++ b/web/package.json
@@ -35,6 +35,7 @@
     "@types/chart.js": "^2.9.24",
     "@types/dotenv": "^8.2.0",
     "@types/jest": "^26.0.13",
+    "@types/mongodb": "^3.5.27",
     "@types/node": "^14.10.1",
     "@types/node-fetch": "^2.5.7",
     "@types/react": "^16.9.49",
