--- a/web/netlify.toml
+++ b/web/netlify.toml
@@ -7,3 +7,8 @@
   from = '/api/*'
   to = '/.netlify/functions/:splat'
   status = 200
+
+[[redirects]]
+  from = '/*'
+  to = '/index.html'
+  status = 200
