--- a/web/netlify.toml
+++ b/web/netlify.toml
@@ -9,6 +9,15 @@
   status = 200
 
 [[redirects]]
+  from = '/api/gas/trend'
+  to = '/.netlify/functions/trend'
+
+[[redirects]]
+  from = '/api/alerts/stats'
+  to = '/.netlify/functions/alerts'
+  status = 200
+
+[[redirects]]
   from = '/*'
   to = '/index.html'
   status = 200
