--- a/web/package.json
+++ b/web/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "scripts": {
     "start": "concurrently 'react-scripts start' 'netlify-lambda serve src/functions'",
+    "functions": "netlify-lambda serve src/functions",
     "build": "react-scripts build && netlify-lambda build src/functions",
     "test": "react-scripts test --coverage --verbose --detectOpenHandles --forceExit"
   },
