--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.2.5",
+    "base-64": "^1.0.0",
     "bootstrap": "^4.5.2",
     "chart.js": "^2.9.3",
     "dotenv": "^8.2.0",
