avg gas prices heatmap

--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "react": "^16.13.1",
     "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
+    "react-grid-heatmap": "^1.0.1",
     "react-router-dom": "^5.2.0",
     "saslprep": "^1.0.3"
   },
