--- a/web/netlify.toml
+++ b/web/netlify.toml
@@ -4,7 +4,7 @@
   publish = "build"
 
 [[redirects]]
-  from = '*'
+  from = '/*'
   to = 'https://www.useweb3.xyz/gas?source=ethgas.watch&referrer=ethgas.watch'
   status = 301
 
